stateDiagram-v2
  [*] --> WAITING
  WAITING --> CALLED: callNextTeam (head only)
  CALLED --> CHECKING_IN: beginTeamCheckIn
  CHECKING_IN --> CHECKING_IN: background roster location checks
  CHECKING_IN --> READY_TO_PLAY: captain confirms own team once
  CHECKING_IN --> SCORE_PROPOSED: captain proposes allowed target
  SCORE_PROPOSED --> CHECKING_IN: opposing captain confirms target
  CALLED --> MISSED_QUEUE: deadline expired
  CHECKING_IN --> MISSED_QUEUE: deadline expired
  READY_TO_PLAY --> PLAYING: two teams ready + startMockGame
  MISSED_QUEUE --> WAITING: team joins again manually

  note right of CHECKING_IN
    Deadline derives from the server-owned queue setting (60–600 seconds).
    Admin changes affect newly called teams only.
    Location is checked for every member.
    The captain confirms the team once.
    A confirmed target proposal is snapshotted when the game starts.
  end note
